grammar.js
		document: $ => seq(
			repeat(
				choice(
					$.comment,
					$.import_header,
				),
			),
			choice(
				$.page_header,
				$.taglib_header,
			),
			repeat(
				seq(
					optional($.comment),
					choice(
						$.import_header,
						$.page_header,
						$.taglib_header,
					),
				),
			),
			repeat($._top_level_tag),
		),

		_top_level_tag: $ => choice(
			$._top_level_sp_tag,
			$.comment,
			$.html_doctype,
			// TODO: prec doesn't work here
			prec(3, $.html_void_tag),
			prec(2, $.html_tag),
			prec(1, $.html_option_tag),
			$.java_tag,
			$.script_tag,
			$.style_tag,
			$.xml_comment,
			$.xml_entity,
		),

		_top_level_sp_tag: $ => choice(
			$.attribute_tag,
			$.barcode_tag,
			$.break_tag,
			$.calendarsheet_tag,
			$.checkbox_tag,
			$.code_tag,
			$.collection_tag,
			$.condition_tag,
			$.diff_tag,
			$.error_tag,
			$.expire_tag,
			$.filter_tag,
			$.for_tag,
			$.form_tag,
			$.hidden_tag,
			$.if_tag,
			$.include_tag,
			$.io_tag,
			$.iterator_tag,
			$.json_tag,
			$.linkedInformation_tag,
			$.linktree_tag,
			$.livetree_tag,
			$.log_tag,
			$.login_tag,
			$.loop_tag,
			$.map_tag,
			$.option_tag,
			$.password_tag,
			$.print_tag,
			$.querytree_tag,
			$.radio_tag,
			$.range_tag,
			$.return_tag,
			$.sass_tag,
			$.scaleimage_tag,
			$.scope_tag,
			$.search_tag,
			$.select_tag,
			$.set_tag,
			$.sort_tag,
			$.subinformation_tag,
			$.tagbody_tag,
			$.text,
			$.text_tag,
			$.textarea_tag,
			$.textimage_tag,
			$.throw_tag,
			$.toggle_tag,
			$.upload_tag,
			$.url_tag,
			$.warning_tag,
			$.worklist_tag,
			$.zip_tag,
			$.spt_counter_tag,
			$.spt_date_tag,
			$.spt_diff_tag,
			$.spt_email2img_tag,
			$.spt_encryptemail_tag,
			$.spt_escapeemail_tag,
			$.spt_formsolutions_tag,
			$.spt_id2url_tag,
			$.spt_ilink_tag,
			$.spt_imageeditor_tag,
			$.spt_imp_tag,
			$.spt_iterator_tag,
			$.spt_link_tag,
			$.spt_number_tag,
			$.spt_personalization_tag,
			$.spt_prehtml_tag,
			$.spt_smarteditor_tag,
			$.spt_spml_tag,
			$.spt_text_tag,
			$.spt_textarea_tag,
			$.spt_timestamp_tag,
			$.spt_tinymce_tag,
			$.spt_updown_tag,
			$.spt_upload_tag,
			$.spt_worklist_tag,
		),

		import_header: $ => seq(
			$.header_open,
			'page',
			$.import_attribute,
			$.header_close,
		),

		page_header: $ => seq(
			$.header_open,
			'page',
			$.language_attribute,
			$.pageEncoding_attribute,
			$.contentType_attribute,
			$.header_close,
		),

		taglib_header: $ => seq(
			$.header_open,
			'taglib',
			choice(
				$.uri_attribute,
				$.tagdir_attribute,
			),
			$.prefix_attribute,
			$.header_close,
		),

		header_open: $ => '<%@',
		header_close: $ => '%>',

		// sp tags

		attribute_tag: $ => seq(
			$.attribute_tag_open,
			repeat(
				choice(
					$.condition_attribute,
					$.dynamics_attribute,
					$.expression_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.object_attribute,
					$.text_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		attribute_tag_open: $ => '<sp:attribute',

		barcode_tag: $ => seq(
			$.barcode_tag_open,
			repeat(
				choice(
					$.height_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.scope_attribute,
					$.text_attribute,
					$.type_attribute,
					$.width_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		barcode_tag_open: $ => '<sp:barcode',

		calendarsheet_tag: $ => seq(
			$.calendarsheet_tag_open,
			repeat(
				choice(
					$.action_attribute,
					$.date_attribute,
					$.from_attribute,
					$.mode_attribute,
					$.name_attribute,
					$.object_attribute,
					$.scope_attribute,
					$.to_attribute,
					$.value_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.calendarsheet_tag_close,
				),
			),
		),
		calendarsheet_tag_open: $ => '<sp:calendarsheet',
		print_tag: $ => seq(
			$.print_tag_open,
			repeat(
				choice(
					$.arg_attribute,
					$.condition_attribute,
					$.convert_attribute,
					$.cryptkey_attribute,
					$.dateformat_attribute,
					$.decimalformat_attribute,
					$.decoding_attribute,
					$.decrypt_attribute,
					$.default_attribute,
					$.encoding_attribute,
					$.encrypt_attribute,
					$.expression_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.text_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.print_tag_close,
				),
			),
		),
		print_tag_open: $ => '<sp:print',
		tagbody_tag: $ => seq(
			$.tagbody_tag_open,
			$.self_closing_tag_end,
		),
		tagbody_tag_open: $ => '<sp:tagbody',

		self_closing_tag_end: $ => '/>',

		// spt tags

		dynamic_attribute: $ => seq(
			$.attribute_name,
			optional(
				seq(
					'=',
					$.string,
				),
			),
		),
		attribute_name: $ => /\w+/,

		action_attribute: $ => seq(
			'action',
			'=',
			$.string,
		),

		contentType_attribute: $ => seq(
			'contentType',
			'=',
			$.string,
		),

		dynamics_attribute: $ => seq(
			'dynamics',
			'=',
			$.string,
		),

		from_attribute: $ => seq(
			'from',
			'=',
			$.string,
		),

		height_attribute: $ => seq(
			'height',
			'=',
			$.string,
		),

		import_attribute: $ => seq(
			'import',
			'=',
			$.string,
		),

		language_attribute: $ => seq(
			'language',
			'=',
			$.string,
		),

		locale_attribute: $ => seq(
			'locale',
			'=',
			$.string,
		),

		name_attribute: $ => seq(
			'name',
			'=',
			$.object_string,
		),

		object_attribute: $ => seq(
			'object',
			'=',
			$.object_string,
		),

		pageEncoding_attribute: $ => seq(
			'pageEncoding',
			'=',
			$.string,
		),

		prefix_attribute: $ => seq(
			'prefix',
			'=',
			$.string,
		),

		tagdir_attribute: $ => seq(
			'tagdir',
			'=',
			$.string,
		),

		text_attribute: $ => seq(
			'text',
			'=',
			$.string,
		),

		to_attribute: $ => seq(
			'to',
			'=',
			$.string,
		),

		type_attribute: $ => seq(
			'type',
			'=',
			$.string,
		),

		uri_attribute: $ => seq(
			'uri',
			'=',
			$.string,
		),

		width_attribute: $ => seq(
			'width',
			'=',
			$.string,
		),

		comment: $ => /<%--[^-]*-(?:(?:[^-]|-+[^-%]|-+%[^>])[^-]*-)*-+%>/,

		string: $ => seq(
			'"',
			repeat(
				choice(
					/[^"$!\}]+/,
					prec(1, $.interpolated_string),
					prec(2, $.interpolated_anchor),
					prec(3, '$'),
					prec(4, '!'),
				),
			),
			'"',
		),

		text: $ => /[^<>&\s]+(?:[^<>&]+[^<>&\s])?/,

		java_tag: $ => seq(
			'<%',
			$.java_code,
			'%>',
		),
		java_code: $ => /[^%\s]+(?:(?:[^%]+|%+[^>%][^%]+)[^%\s])*/,

		html_tag: $ => seq(
			$.html_tag_open,
			repeat($.dynamic_attribute),
			seq(
				'>',
				repeat($._top_level_tag),
				$.html_tag_close,
			),
		),
		// TODO: doesn't match a closing tag with its own name!
		html_tag_open: $ => /<\w+/,
		html_tag_close: $ => /<\/\w+>/,

		html_option_tag: $ => seq(
			$.html_option_tag_open,
			repeat($.dynamic_attribute),
			'>',
		),
		html_option_tag_open: $ => choice(
			'<body',
			'<caption',
			'<colgroup',
			'<dd',
			'<dt',
			'<head',
			'<html',
			'<li',
			'<optgroup',
			'<option',
			'<p',
			'<rp',
			'<rt',
			'<tbody',
			'<td',
			'<tfoot',
			'<th',
			'<thead',
			'<tr',
		),

		html_void_tag: $ => seq(
			$.html_void_tag_open,
			repeat($.dynamic_attribute),
			choice(
				'>',
				$.self_closing_tag_end,
			),
		),
		html_void_tag_open: $ => choice(
			'<area',
			'<base',
			'<br',
			'<col',
			'<embed',
			'<hr',
			'<img',
			'<input',
			'<link',
			'<meta',
			'<source',
			'<svg',
			'<track',
			'<wbr',
		),

		html_doctype: $ => seq(
			'<!',
			/[Dd][Oo][Cc][Tt][Yy][Pp][Ee]/,
			'html',
			optional(
				choice(
					'"about:legacy-compat"',
					'\'about:legacy-compat\'',
				),
			),
			'>',
		),

		xml_comment: $ => seq(
			'<!--',
			repeat(
				choice(
					$._top_level_sp_tag,
					$.comment,
				),
			),
			'-->',
		),

		xml_entity: $ => /&(#([xX][0-9a-fA-F]{1,6}|[0-9]{1,5})|[A-Za-z]{1,30});/,
	}
});
