test/corpus/java.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%><%@ page import="java.util.ArrayList"
%>

<%
	final ArrayList<String> list = new ArrayList<>();
	list.add(">");
	list.add("<");
	list.add("%");
	list.add("%%");
	final String result = list.stream()
		.sorted()
		.forEach(System.out::print);
%>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (import_header
    (import_attribute
      (string
        (string_content))))
  (java_tag
    (java_code)))
