test/corpus/sp_barcode.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:barcode name="_someBarcode" type="qrcode" text="${_someLink.link.absoluteUrl}"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (barcode_tag
    (barcode_tag_open)
    (name_attribute
      (string
        (string_content)))
    (type_attribute
      (string
        (string_content)))
    (text_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))

================================================================================
complex
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:barcode
		name="_someBarcode"
		type="qrcode"
		text="${_someLink.link.absoluteUrl}"
		width="400"
		height="400"
		locale="_someLocale"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (barcode_tag
    (barcode_tag_open)
    (name_attribute
      (string
        (string_content)))
    (type_attribute
      (string
        (string_content)))
    (text_attribute
      (string
        (string_content)))
    (width_attribute
      (string
        (string_content)))
    (height_attribute
      (string
        (string_content)))
    (locale_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
