test/corpus/sp_calendarsheet.txt
================================================================================
creating
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:calendarsheet name="_cal" action="new" from="_from" to="_to"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (calendarsheet_tag
    (calendarsheet_tag_open)
    (name_attribute
      (string
        (string_content)))
    (action_attribute
      (string
        (string_content)))
    (from_attribute
      (string
        (string_content)))
    (to_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))

================================================================================
adding
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:calendarsheet name="_cal" action="add" object="_someDate"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (calendarsheet_tag
    (calendarsheet_tag_open)
    (name_attribute
      (string
        (string_content)))
    (action_attribute
      (string
        (string_content)))
    (object_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
